styles1.css
*,
*:after,
*:before {
  box-sizing: border-box;
}

* {
    margin: auto 0;
    /*border: 1px solid red;*/
}

.clearfix: after {
    content: ' ';
    display: table;
    clear: both;
}

body {
    background-color: #ffffff;
    font-family: 'Open Sans', sans-serif;
    height: 100%;
    width: 100%;
    border: 2px solid #000000;
}

nav {
    background-color: #75e2e6;
    border-bottom: 3px solid #048eaa;
}

.nav-dog {
    height: 45px;
    margin: 10px 15px 10px 20px;
    margin-left: 20px;
}

.dog-links {
    margin-top: 23px;
    margin-left: auto;
    width: 450px;
    display: inline;
    float: right;
}

ul {
    list-style: none;
}

li {
    padding: 10px;
    display: inline;
}

li:hover {
    color: #ffffff;
    cursor: pointer;
}

header {
    padding-top: 20px;
    text-align: center;
    height: 30%;
    background-image: url(images/park.jpg);
    background-size: cover;
    background-color: lightgrey;
    background-blend-mode: multiply;
    background-position: bottom;

}

h2 {
    padding: 5px;
    color: #ffffff;
}

.changeable-title {
    font-weight: 400;
}

.header-content {
    width: 285px;
    margin: auto;
}

.header-dog,
.how-to-dog-img,
.what-is-dogs-img,
.facts-from-dog-img
 {
    border: 4px solid #048eaa;
    border-radius: 50%;
    width: 150px;
    margin: 20px;
}

form {
    border: none;
}

.dog-name-input,
.dog-name-button {
    margin-bottom: 20px;
    display: block;
    text-align: left;
    border-style: none;
}

label {
    display: block;
    font-size: 13px;
    color: #ffffff;
    text-align: left;
    margin-bottom: 5px;
}

input {
    width: 100%;
    height:6vh;
}

.dog-name-button {
    width: 100%;
    height: 6vh;
    text-align: center;
    font-weight: 700;
    font-size: 13px;
    background-color: #75e2e6;
    vertical-align: text-bottom;
}

.how-button,
.what-button,
.facts-button {
    font-size: 16px;
    background-color: #048eaa;
    color: #ffffff;
    width: 250px;
    height: 6vh;
    border-style: none;
    margin: 45px 0;
}

p {
    text-align: left;
    margin: auto;
    width: 250px;
    height: 30vh;
}

main {
    height: 100%;
}

article {
    text-align: center;
    display: inline-block;
    vertical-align: text-top;
    margin-top: 35px; 
    width: 33%;
}

h3 {
    font-weight: 800;
}

footer {
    background-color: #048eaa;
    height: 10%;
    text-align: center;
}

.learn-about-dogs {
    padding-top: 30px;
    font-size: 17px;
    color: white;
    font-weight: 400;
}

.twitter-svg,
.instagram-svg,
.facebook-svg,
.linkedin-svg {
    width: 39px;
    margin: 7px;
}

#twitter-svg {
    height: 35px;
}

.social-media-imgs {
    margin: 20px 0;
}

@media only screen and (max-width: 875px) {
    article {
        display: block;
        margin: 25px auto;
        width: 100%;
    }
}

@media only screen and (max-width: 540px) {
    ul {
        display: inline-block;
    }

    li {
        display: block;
        font-size: 14px;
        padding: 0;
        text-align: right;
    }

    .dog-links {
        margin-top: 9px;
        margin-left: auto;
        margin-right: 20px;
        width: 150px;
    }

    header {
        padding: 0;
    }
}

